Adicionei o formulário de matrícula

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -280,7 +280,7 @@ Maravilhoso! Lugar que proporciona grande base de educacional e didática! Guard
     </section><!-- End Depoimentos Section -->
 
 <!-- Section Fotos -->
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div id="fotos" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="https://www.cepintandoosete.com.br/wp-content/uploads/2015/09/04-estrutura-escola.jpg" class="d-block m-auto" alt="...">
@@ -431,9 +431,7 @@ Maravilhoso! Lugar que proporciona grande base de educacional e didática! Guard
             Desenvolvido pela <a href="index.html">TrueCode</a>
           </div>
         </div>
-      </div>
 
-    </div>
   </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
