Adicionei novos controllers, models, views, criação do banco de dados

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,7 +38,7 @@
           <li><a class="nav-link scrollto" href="#direcao">Direção</a></li>
           <li><a class="nav-link scrollto " href="#fotos">Fotos</a></li>
           <li><a class="nav-link scrollto" href="#contato">Contato</a></li>
-          <li><a class="scrollto" href="#boletim">Boletim Escolar</a></li>
+          <li><a class="scrollto" href="matricularAluno">Boletim Escolar</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
