Alterações no arquivo

--- a/src/main/resources/templates/formulario.html
+++ b/src/main/resources/templates/formulario.html
@@ -73,7 +73,7 @@
             <input type="text" class="form-control" id="cidade" name="cidade">
           </div>
           <div class="col-12">
-            <label for="inputgenero" class="form-label">Gênero que se identifica</label>
+            <label for="inputgenero" class="form-label">Gênero</label>
             <input type="text" class="form-control" id="genero" placeholder="Seu gênero" name="genero">
           </div>
           <div class="col-md-2">
