--- a/src/main/resources/templates/matriculas.html
+++ b/src/main/resources/templates/matriculas.html
@@ -63,17 +63,26 @@
 
     <section class="inner-page">
       <div class="container">
-        <div th:each="matricula : ${matriculas}">
-        <div class="row">
-        <p><span th:text="${matricula.nome}"></span><p>
-        <p><span th:text="${matricula.cidade}"></span><p>
-        <p><span th:text="${matricula.genero}"></span><p>
-        <p><span th:text="${matricula.ensino}"></span><p>
-        <p><span th:text="${matricula.telefone}"></span><p>
-        
-        </div>
-        
-        </div>
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">Nome</th>
+              <th scope="col">Cidade</th>
+              <th scope="col">Gênero</th>
+              <th scope="col">Ensino</th>
+              <th scope="col">Telefone</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr th:each="matricula : ${matriculas}">
+              <td th:text="${matricula.nome}"></td>
+              <td th:text="${matricula.cidade}"></td>
+              <td th:text="${matricula.genero}"></td>
+              <td th:text="${matricula.ensino}"></td>
+              <td th:text="${matricula.telefone}"></td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </section>
 
