Alterações nos nomes das páginas

--- a/src/main/resources/templates/formulario.html
+++ b/src/main/resources/templates/formulario.html
@@ -34,9 +34,9 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#inicio">Início</a></li>
+          <li><a class="nav-link scrollto active" href="index">Início</a></li>
           <li><a class="nav-link scrollto" href="matriculas">Matrículas</a></li>
-          <li><a class="scrollto" href="#boletim">Boletim Escolar</a></li>
+          <li><a class="scrollto" href="#boletim">Página do Educador</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
