Atualizações em páginas

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,7 +38,7 @@
           <li><a class="nav-link scrollto" href="#direcao">Direção</a></li>
           <li><a class="nav-link scrollto " href="#fotos">Fotos</a></li>
           <li><a class="nav-link scrollto" href="#contato">Contato</a></li>
-          <li><a class="scrollto" href="matricularAluno">Boletim Escolar</a></li>
+          <li><a class="scrollto" href="matricularAluno">Página do Educador</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -56,7 +56,6 @@
           <h2>Se a educação sozinha não transforma a sociedade, sem ela tampouco a sociedade muda.
 
           </h2>
-          <div><a href="#inicio" class="btn-get-started scrollto">Get Started</a></div>
         </div>
         <div class="col-xl-4 col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="150">
           <img src="assets/img/WhatsApp-Image-2020-10-20-at-3.43.32-PM-1.jpeg" class="img-fluid animated" alt="">
@@ -279,28 +278,35 @@ Maravilhoso! Lugar que proporciona grande base de educacional e didática! Guard
       </div>
     </section><!-- End Depoimentos Section -->
 
+<div id="fotos"></div>
 <!-- Section Fotos -->
-    <div id="fotos" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="https://www.cepintandoosete.com.br/wp-content/uploads/2015/09/04-estrutura-escola.jpg" class="d-block m-auto" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="https://www.cepintandoosete.com.br/wp-content/uploads/2015/09/02-estrutura-escola-TRATADA.jpg" class="d-block m-auto" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="https://static.hbt.triider.com.br/photos/project/big/escola-em-estrutura-metalica-1054974.jpg" class="d-block m-auto" alt="...">
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="assets/img/02-estrutura-escola-TRATADA.jpg" class="d-block w-100" alt="...">
     </div>
+    <div class="carousel-item">
+      <img src="assets/img/001-1024x684-1.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/img/04-estrutura-escola.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/img/escola-em-estrutura-metalica-1054974.jpg" class="d-block w-100" alt="...">
+    </div>
+        <div class="carousel-item">
+      <img src="assets/img/germano-5763882.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 
     <!-- End Section Fotos -->
 
